# secure-email

./: .gitignore  README.md  pyproject.toml
client/: api.py  cli.py  quick_reply.py  ui.py
common/: config.py  data_security.py  e2e.py  schemas.py  text_features.py  utils.py
configs/: domainA.yaml  domainB.yaml
docs/: alerting_and_audit.md  assignment_coverage.md  end_to_end_encryption_design.md  implementation_structure.txt  malicious_mail_poc.md  p2p_feasibility.md  protocol.md  secure_email_presentation.tex  stress_test_results.json  stress_test_results.md  test_report.md  threat_model.md
docs/security_lab_cli/: security_report.json
docs/security_lab_cli/sim-aa9979f2-6159-46ed-9805-d986ec03821e/domainA/logs/: alerts.jsonl  security.jsonl
docs/security_lab_cli/sim-aa9979f2-6159-46ed-9805-d986ec03821e/domainA/mail/: mailstore.sqlite3
docs/security_lab_cli/sim-aa9979f2-6159-46ed-9805-d986ec03821e/domainB/logs/: alerts.jsonl  security.jsonl
docs/test_frontend_screenshots/: 07_storage_dedup_evidence.html  README.md  index.html  manifest.json
scripts/: build_lecture_pdf.py  generate_real_frontend_screenshots.py  generate_stress_results.py  run_demo.ps1  run_security_lab.py  start_domain_a.ps1
server/: attachments.py  auth.py  e2e_keys.py  image_ai.py  logging.py  mailbox.py  main.py  rate_limit.py  relay.py  security.py  security_simulation.py  smart.py  smart_routes.py  storage.py  web.py  workers.py
tests/: test_secure_mail.py
web/: app.js  index.html  security-lab.css  security-lab.js  styles.css
(+1 files in other folders)
